--- a/style.css
+++ b/style.css
@@ -2,152 +2,169 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;600&display=swap');
 
+:root {
+    --White: hsl(0, 0%, 100%);
+    --LightGrey: hsl(217, 12%, 63%);
+    --MediumGrey: hsl(216, 12%, 54%);
+    --DarkBlue: hsl(213, 19%, 18%);
+    --VeryDarkBlue: hsl(216, 12%, 8%);
+    --Orange: hsl(25, 97%, 53%);
+    font-family: 'Manrope', sans-serif;
+}
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-    color: white;
 }
 
 body {
-    background-color: hsl(216, 12%, 8%);
-}
-
-.corpo {
-    display: block;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    height: 310px;
-    border-radius: 20px;
-    background-color: hsl(213, 19%, 18%);
-    transform: translate(-50%, -50%);
-}
-
-.img-1 {
-    margin: 25px 25px;  
-}
-
-.text {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-}
-
-.text > h1 {
-    font-size: 22px;
-    padding: 0px 0px 15px 25px;
-    font-family: 'Overpass', sans-serif;
-}
-
-.text > p {
-    font-family: 'Overpass', sans-serif;
-    padding: 0px 10px 15px 25px;
-    font-size: 14px;
-}
-
-.score-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-
-    
-}
-
-.score-btn {
-    background-color: hsl(216, 12%, 54%);
-    text-align: center;
-    padding: 10px 18px 10px 18px;
-    border: none;
-    height: 40px;
-    border-radius: 100px;
-    color: black;
-    cursor: pointer;
-}
-
-.score-btn:hover {
-    background-color: hsla(215, 14%, 75%, 0.897) ;
-}
-
-.button {
-    text-align: center;
-    margin-top: 15px;
-}
-
-.submit:hover {
-    background-color: hsla(25, 97%, 53%, 0.822);
-}
-
-.submit {
-    color: white;
-    background-color:hsl(25, 97%, 53%);
-    padding: 10px 110px 10px 110px;
-    border-radius: 40px;
-    border: none;
-    cursor: pointer;
-}
-
-.corpo-2 {
-    display: none;
-    position: absolute; 
-    top: 50%;
-    left: 50%;
-    height: 310px;
-    border-radius: 20px;
-    background-color: hsl(213, 19%, 18%);
-    transform: translate(-50%, -50%);
-    
-}
-
-.img-2 {
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 15px;
-}
-
-.img-2 > img {
-    height: 70px;
-    width: 110px;
-}
-
-.text-2 {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    text-align: center;
-    font-family: 'Overpass', sans-serif;
-    
-}
-
-.selected {
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--VeryDarkBlue);
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    width: 340px;
+    background-color: var(--DarkBlue);
+    border-radius: 20px;
+}
+
+.star {
+    background-color: hsla(216, 12%, 8%, 0.438); 
+    border-radius: 50px;
+    padding: 10px;
+}
+
+.box-star {
+    margin-top: 25px;
+    margin-left: 30px;
+}
+
+.box-text {
+    margin-left: 30px;
+    color: white;
+}
+
+.box-text > h1 {
+    font-size: 1.2rem;
+    margin-top: 20px;
+}
+
+.box-text > p {
+    font-size: 0.8rem;
+    padding-right: 20px;
+    margin-top: 10px;
+    line-height: 1.2rem;
+}
+
+.box-btn {
+    display: flex;
+    margin-top: 20px;
+    margin-left: 30px;
+    gap: 22px;
+}
+
+.btn {
+   height: 39px;
+   width: 39px;
+   border-radius: 50%; 
+   border: none;
+   background-color: hsla(216, 12%, 8%, 0.438);
+   color: white;
+   cursor: pointer;
+}
+
+.box-submit {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-bottom: 25px;
+}
+
+.btn-submit {
+    width: 280px;
+    height: 35px;
+    border-radius: 50px;
+    border: none;
+    background-color: var(--Orange);
+    color: white;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: var(--MediumGrey);
+    transition: 0.2s;
+}
+
+.btn:active {
+    background-color: black;
+}
+
+.btn-submit:hover {
+    background-color: hsla(25, 97%, 53%, 0.767);
+}
+
+.btn-submit:active {
+    background-color:hsl(25, 97%, 53%) ;
+}
+
+
+.box-select {
+    display: flex;
+    display: none;
+    flex-direction: column;
+    width: 340px;
+    background-color: var(--DarkBlue);
+    border-radius: 20px;
+}
+
+.box-cell {
     text-align: center;
-    background-color: hsl(210, 40%, 37%);
-    width: 165px;
-    margin-left: 75px;
-    border-radius: 10px; 
-    margin-bottom: 15px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    margin-top: 40px;
+}
+
+.text-orange {
+    text-align: center;
+    background-color: hsl(213, 5%, 35%) ;
+    width: 170px;
+    margin-top: 25px;
+    margin-left: 90px;
+    color: var(--Orange);
+    border-radius: 50px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    font-size: 0.8rem;
+}
+
+.box-select h1 {
+    font-size: 1.6rem;
+    text-align: center;
+    margin-top: 25px;
+    color: white;   
+}
+
+.msg {
+    text-align: center;
+    color: white;
+    font-size: 0.8rem;
+    padding-left: 27px;
+    padding-right: 27px;
+    margin-top: 10px;
+    margin-bottom: 40px;
     
 }
 
-.selected > p {
-    color: orange;
-    text-align: center;       
+.some {
+    display: none;
 }
 
-.text-2 > h1 {
-    font-size: 22px;
-    margin-bottom: 25px
+.aparece {
+    display: block;
 }
 
-.text-2 > p {
-    font-size: 14px;
-}
